Fix recent thumbnail size issue and left alignment

--- a/themes/experience-engine-v2/assets/styles/page/header.css
+++ b/themes/experience-engine-v2/assets/styles/page/header.css
@@ -557,6 +557,7 @@
 					margin-right: 5vw;
 					@media(--max-x2large-viewport) {
 					  width:100%;
+					  margin-right:0;
 					}
 					&:last-child{
 					  padding-right:0;
